--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,6 @@
   },
 
   "require": {
-    "apimatic/mundiapi": "dev-master"
-  },
-
-  "repositories": [
-    {
-      "type": "git",
-      "url": "https://github.com/mundipagg/mundiapi-php"
-    }
-  ]
+    "mundipagg/mundiapi": "dev-master"
+  }
 }
