--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,13 @@
 
   "require-dev" : {
     "squizlabs/php_codesniffer" : "^3.0",
-    "phpunit/phpunit" : "^6.2"
+    "phpunit/phpunit" : "^6.2",
+    "magento-ecg/coding-standard": "^3.1"
+  },
+
+  "scripts": {
+    "phpcs": "phpcs --standard=lib/magento-ecg/coding-standard/Ecg app/code/community/Mundipagg/Paymentmodule/",
+    "phpcbf": "phpcbf --standard=lib/magento-ecg/coding-standard/Ecg app/code/community/Mundipagg/Paymentmodule/"
   },
 
   "autoload": {
