:green_heart: adding branch filters to CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,7 @@ jobs:
        - run:
            name: Send deployment webhook to Rancher
            command: |
-             BODY='{"push_data":{"tag":"${CIRCLE_BRANCH}"},"repository":{"repo_name":"'"${DOCKER_ACCOUNT}/${PROJECT_NAME}"'"}}'
+             BODY='{"push_data":{"tag":"'"${CIRCLE_BRANCH}"'"},"repository":{"repo_name":"'"${DOCKER_ACCOUNT}/${PROJECT_NAME}"'"}}'
              curl -X POST ${RANCHER_STG_DEPLOY_URL} -H 'Content-Type: application/json' -d "${BODY}"
 
 workflows:
@@ -124,6 +124,12 @@ workflows:
       - publish:
           requires:
             - build
+          filters:
+            branches:
+              only: master
       - deploy_staging:
           requires:
             - publish
+          filters:
+            branches:
+              only: master
