:arrow_up: Add Robo

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
   },
 
   "require": {
-    "mundipagg/mundiapi": "dev-master"
+    "mundipagg/mundiapi": "dev-master",
+    "consolidation/robo": "~1"
   }
 }
