--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
     "phpunit/phpunit" : "^6.2",
     "magento-ecg/coding-standard": "^3.1",
     "consolidation/robo": "^1.1",
-    "behat/behat": "^3.4",
-    "behat/mink-extension": "^2.3",
-    "behat/mink-goutte-driver": "^1.2",
-    "behat/mink-selenium2-driver": "^1.3"
+    "behat/behat": "~2.5",
+    "behat/mink-extension": "~1.3",
+    "behat/mink-goutte-driver": "~1.2",
+    "fabpot/goutte": "1.*@stable",
+    "behat/mink-selenium2-driver": "~1.2"
   },
 
   "scripts": {
