--- a/behat.yml
+++ b/behat.yml
@@ -1,6 +1,6 @@
-default:
+local:
     extensions:
-        Behat\MinkExtension\Extension:
+        Behat\MinkExtension:
           base_url: http://m1m1.localhost
           browser_name: chrome
           default_session: selenium2
@@ -8,3 +8,13 @@ default:
           selenium2:
               wd_host: 127.0.0.1:9515
               browser: chrome
+default:
+      extensions:
+        DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
+        Behat\MinkExtension:
+          browser_name: chrome
+          base_url: http://m1m1.localhost
+          sessions:
+            javascript:
+              chrome:
+                api_url: "http://localhost:9222"
