--- a/behat.yml
+++ b/behat.yml
@@ -6,15 +6,15 @@ local:
           default_session: selenium2
           goutte: ~
           selenium2:
-              wd_host: 127.0.0.1:9515
+              wd_host: 127.0.0.1:9222
               browser: chrome
 default:
       extensions:
         DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
         Behat\MinkExtension:
           browser_name: chrome
-          base_url: http://m1m1.localhost
+          base_url: http://127.0.0.1
           sessions:
             javascript:
               chrome:
-                api_url: "http://localhost:9222"
+                api_url: "http://127.0.0.1:9222"
