:green_heart: Update CI to get context variables.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -209,14 +209,15 @@ workflows:
           requires:
             - build
       - publish:
+          context: DockerRegistry
           requires:
             - test
           filters:
             branches:
-              only: master
+              only: develop
       - deploy_staging:
           requires:
             - publish
           filters:
             branches:
-              only: master
+              only: develop
