:arrow_up: updating composer dependencies and adding crook

--- a/behat.yml
+++ b/behat.yml
@@ -8,6 +8,18 @@ local:
           selenium2:
               wd_host: 127.0.0.1:9222
               browser: chrome
+
+localsample:
+  extensions:
+    Behat\MinkExtension:
+      base_url: http://m1m1-sample.localhost
+      browser_name: chrome
+      default_session: selenium2
+      goutte: ~
+      selenium2:
+        wd_host: 127.0.0.1:9222
+        browser: chrome
+
 default:
       extensions:
         DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
