--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,13 @@
     "phpunit/phpunit" : "^6.2",
     "magento-ecg/coding-standard": "^3.1",
     "consolidation/robo": "^1.1",
-    "behat/behat": "~3.0.4",
+    "behat/behat": "~3.4.3",
     "behat/mink-extension": "~2.3.1",
     "behat/mink-goutte-driver": "~1.2",
-    "fabpot/goutte": "1.*@stable",
     "behat/mink-selenium2-driver": "~1.2",
-    "dmore/behat-chrome-extension": "^1.2"
+    "dmore/behat-chrome-extension": "^1.2",
+    "felipebool/crook": "^0.0.12"
+
   },
 
   "scripts": {
