--- a/behat.yml
+++ b/behat.yml
@@ -1,5 +1,6 @@
 local:
   extensions:
+    Knp\FriendlyContexts\Extension: ~
     Behat\MinkExtension:
       base_url: http://m1m1.localhost
       browser_name: chrome
