--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,15 @@
     "behat/mink-goutte-driver": "~1.2",
     "behat/mink-selenium2-driver": "~1.2",
     "dmore/behat-chrome-extension": "^1.2",
-    "felipebool/crook": "^0.0.12"
+    "felipebool/crook": "^0.0.12",
+    "knplabs/friendly-contexts": "@dev"
   },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/aitboudad/FriendlyContexts.git"
+    }
+  ],
 
   "scripts": {
     "phpcs": "phpcs --standard=lib/magento-ecg/coding-standard/Ecg app/code/community/Mundipagg/Paymentmodule/",
