--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,7 +113,9 @@ jobs:
               echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' | tee /etc/apt/sources.list.d/google-chrome.list && \
               apt-get -y update && apt-get -y install google-chrome-unstable"
             docker exec -i newimage sh -c \
-              "cd /app/.modman/magento && composer update -vvv"
+              "cd /app/.modman/magento && \
+              composer config --global github-oauth.github.com "${GITHUB_TOKEN}" && \
+              composer update -vvv"
 
       - run:
           name: Run Functional Tests
