--- a/behat.yml
+++ b/behat.yml
@@ -1,22 +1,22 @@
+default:
+  extensions:
+    Knp\FriendlyContexts\Extension: ~
+    DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
+    Behat\MinkExtension:
+      browser_name: chrome
+      base_url: http://127.0.0.1
+      sessions:
+        javascript:
+          chrome:
+            api_url: "http://127.0.0.1:9222"
 local:
   extensions:
     Knp\FriendlyContexts\Extension: ~
+    DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
     Behat\MinkExtension:
-      base_url: http://m1m1.localhost
       browser_name: chrome
-      default_session: selenium2
-      goutte: ~
-      selenium2:
-        wd_host: 127.0.0.1:9222
-        browser: chrome
-
-default:
-      extensions:
-        DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
-        Behat\MinkExtension:
-          browser_name: chrome
-          base_url: http://127.0.0.1
-          sessions:
-            javascript:
-              chrome:
-                api_url: "http://127.0.0.1:9222"
+      base_url: http://m1m1.localhost
+      sessions:
+        javascript:
+          chrome:
+            api_url: "http://127.0.0.1:9222"
