--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,7 +121,7 @@ jobs:
       - run:
           name: Run Functional Tests
           command: |
-            docker exec --detach newimage google-chrome-unstable --disable-gpu --no-sandbox --headless --remote-debugging-address=127.0.0.1 --remote-debugging-port=9222 &
+            docker exec --detach newimage google-chrome-unstable --disable-gpu --no-sandbox --headless --remote-debugging-address=127.0.0.1 --remote-debugging-port=9222 --disable-extensions &
             docker exec -i newimage sh -c 'cd /app/.modman/magento && ./ciTestRunner.sh "lib/bin/behat"'
 
       - run:
@@ -140,6 +140,7 @@ jobs:
             mkdir apache
             docker cp newimage:/app/var/log/ ./magento
             docker cp newimage:/var/log/apache2/ ./apache
+            docker cp newimage:/app/.modman/magento/failureScreenshots .
           when: on_fail
 
       - store_artifacts:
