:sparkles: Starting hub integration

--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,9 @@
 
   "autoload": {
     "psr-4": {
-      "Mundipagg\\": "app/"
+      "Mundipagg\\": "app/",
+      "Mundipagg\\Core\\": "app/code/community/Mundipagg/Paymentmodule/etc/core/src",
+      "Mundipagg\\HubIntegration\\": "app/code/community/Mundipagg/Paymentmodule/etc/hub/src/"
     }
   },
 
