:sparkles: Added core on module and change hub integration to use the core

--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,6 @@
     {
       "type": "vcs",
       "url": "https://github.com/aitboudad/FriendlyContexts.git"
-    },
-    {
-      "type": "vcs",
-      "url": "https://github.com/mundipagg/module-maintenance"
     }
   ],
 
@@ -44,7 +40,7 @@
   },
 
   "require": {
-    "mundipagg/mundiapi": "dev-master",
-    "mundipagg/module-maintenance" : "dev-develop"
+    "mundipagg/mundiapi": "^3.0",
+    "mundipagg/ecommerce-module-core" : "1.3.1"
   }
 }
