--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -100,11 +100,8 @@ jobs:
               "chown -R www-data:root /app/"
             docker exec -it newimage /bin/sh -c "echo Step 9"
             docker exec -i newimage sh -c \
-              "cd /app/.modman/magento"
+              "cd /app/.modman/magento && composer update --no-dev -vvv"
             docker exec -it newimage /bin/sh -c "echo Step 10"
-            docker exec -i newimage sh -c \
-              "composer update --no-dev -vvv"
-            docker exec -it newimage /bin/sh -c "echo Step 11"
             docker exec -i newimage sh -c \
               "/root/bin/modman repair --force"
       - run:
