--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -236,6 +236,7 @@ jobs:
       - run:
           name: Activate and setup Plugin
           command: |
+            docker exec -it newimage composer update -vvv
             docker exec -it newimage /root/bin/modman repair --force
             docker exec -it newimage /bin/sh -c "ls"
             docker exec -it newimage php index.php
