:green_heart: Fix CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,12 +158,15 @@ jobs:
           name: Install and run Functional Tests dependencies
           command: |
             docker exec -i newimage sh -c \
+              "apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 5072E1F5"
+            docker exec -i newimage sh -c \
+              "apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 65FFB764"
+            docker exec -i newimage sh -c \
               "wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
               echo 'deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main' | tee /etc/apt/sources.list.d/google-chrome.list && \
               apt-get -y update && apt-get -y install google-chrome-unstable"
             docker exec -i newimage sh -c \
               "cd /app/.modman/magento && \
-              composer config --global github-oauth.github.com "${GITHUB_TOKEN}" && \
               composer update -vvv && /root/bin/modman repair --force"
       - run:
           name: Clear Image Cart Data
